# bbarit-agent-oss

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLI.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  PROVENANCE.md  README.md  RELEASE.md  install.ps1  install.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  upgrade-smoke.yml
personas/ad-performance/: google-ads-specialist.md  media-buyer.md  meta-ads-specialist.md  retargeting-strategist.md
personas/business-startup/: biz-dev-manager.md  pricing-strategist.md  startup-strategist.md  vc-pitch-coach.md
personas/commerce-ops/: crm-retention-manager.md  ecommerce-operator.md  logistics-optimizer.md  sourcing-specialist.md
personas/content-creation/: ad-creative-director.md  brand-storyteller.md  commerce-detail-writer.md  community-manager.md  content-repurposer.md  naver-marketer.md  newsletter-editor.md  performance-copywriter.md  shorts-reels-scripter.md  thumbnail-hook-designer.md  video-edit-director.md  youtube-strategist.md
personas/data-ai/: automation-builder.md  data-analyst.md  llm-app-architect.md  ml-engineer.md
personas/design/: accessibility-designer.md  color-artist.md  dataviz-designer.md  design-qa-reviewer.md  design-system-architect.md  game-ui-designer.md  icon-illustrator.md  landing-cro-designer.md  mobile-ui-designer.md  motion-designer.md  typography-specialist.md  web-designer.md
personas/health-wellness/: fitness-programmer.md  habit-architect.md  nutrition-planner.md  (+1 more)
scripts/: bbarit-oss.cmd  deploy-bbarit-com.sh  setup-font.ps1  smoke.ps1  tty-guard-verify.py
src/: auth.rs  bench.rs  checkpoints.rs  cli.rs  commands.rs  computer.rs  config.rs  extensions.rs  hashline.rs  hooks.rs  keybindings.rs  lib.rs  llm.rs  lsp.rs  main.rs  mcp.rs  memory.rs  orchestrator.rs  package_cli.rs  personas.rs  project.rs  resources.rs  session.rs  spawn.rs  stream_ui.rs  syntax.rs  themes.rs  tools.rs  trust.rs  tui.rs  update.rs  usage.rs  websearch.rs  wiki.rs
(+39 files in other folders)
